[gd_scene load_steps=16 format=3 uid="uid://bq1w2fqfgdvt"]

[ext_resource type="Script" path="res://core/common/dialogue_ballon/dialogue_balloon.gd" id="1_fane2"]
[ext_resource type="Shader" path="res://core/common/shader/color_sprit.gdshader" id="2_rwi5q"]
[ext_resource type="StyleBox" uid="uid://dnmoqh76xtff" path="res://core/common/dialogue_ballon/dialogue/response style box focus.tres" id="3_0f3ae"]
[ext_resource type="Texture2D" uid="uid://cio434a5ajs56" path="res://core/common/dialogue_ballon/resource/dialogue_box.png" id="3_tgniq"]
[ext_resource type="Script" path="res://addons/dialogue_manager/dialogue_label.gd" id="4_ak1da"]
[ext_resource type="Theme" uid="uid://c3gcusv0manb6" path="res://core/common/dialogue_ballon/resource/dialogue_balloon.tres" id="4_lqgeo"]
[ext_resource type="AudioStream" uid="uid://bthdnnqoyuyu5" path="res://test/talking.mp3" id="5_6xaee"]
[ext_resource type="Texture2D" uid="uid://d4maott1dwbor" path="res://core/common/dialogue_ballon/resource/dialogue.png" id="6_l5d13"]
[ext_resource type="Texture2D" uid="uid://cccd0yunpk8u6" path="res://test/mark.png" id="8_cn6xi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tjpum"]
content_margin_left = 3.0
content_margin_right = 3.0
bg_color = Color(0.168627, 0.168627, 0.168627, 0.890196)

[sub_resource type="AtlasTexture" id="AtlasTexture_4v324"]
atlas = ExtResource("6_l5d13")
region = Rect2(16, 0, 16, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_esnon"]
atlas = ExtResource("6_l5d13")
region = Rect2(32, 0, 16, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_6e77p"]
atlas = ExtResource("6_l5d13")
region = Rect2(48, 0, 16, 21)

[sub_resource type="SpriteFrames" id="SpriteFrames_ocbr1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4v324")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_esnon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6e77p")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wuh6v"]
shader = ExtResource("2_rwi5q")
shader_parameter/color = null
shader_parameter/enable = true

[node name="DialogueBalloon" type="Node2D"]
light_mask = 1024
z_index = 99
scale = Vector2(0.7, 0.7)
script = ExtResource("1_fane2")

[node name="Balloon" type="Control" parent="."]
light_mask = 1024
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VB" type="VBoxContainer" parent="Balloon"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_bottom = -7.10893
grow_vertical = 0
mouse_filter = 2
theme = ExtResource("4_lqgeo")
theme_override_constants/separation = 0
alignment = 1

[node name="responseMargin" type="MarginContainer" parent="Balloon/VB"]
unique_name_in_owner = true
light_mask = 1024
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_bottom = 1

[node name="ResponseTemplate" type="RichTextLabel" parent="Balloon/VB/responseMargin"]
unique_name_in_owner = true
visible = false
light_mask = 1024
clip_contents = false
custom_minimum_size = Vector2(0, 9)
layout_mode = 2
focus_mode = 2
mouse_force_pass_scroll_events = false
mouse_default_cursor_shape = 2
theme = ExtResource("4_lqgeo")
theme_override_styles/focus = ExtResource("3_0f3ae")
theme_override_styles/normal = SubResource("StyleBoxFlat_tjpum")
text = "awrdwawad"
fit_content = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false
meta_underlined = false
hint_underlined = false
visible_characters_behavior = 1

[node name="Responses" type="VBoxContainer" parent="Balloon/VB/responseMargin"]
unique_name_in_owner = true
light_mask = 1024
layout_mode = 2
mouse_filter = 2
mouse_force_pass_scroll_events = false
theme = ExtResource("4_lqgeo")
theme_override_constants/separation = 1

[node name="background" type="MarginContainer" parent="Balloon/VB"]
light_mask = 1024
layout_mode = 2
mouse_filter = 2

[node name="BackgroundColor" type="ColorRect" parent="Balloon/VB/background"]
light_mask = 1024
layout_mode = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.364706)

[node name="Margin" type="MarginContainer" parent="Balloon/VB/background"]
light_mask = 1024
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 1

[node name="HB" type="HBoxContainer" parent="Balloon/VB/background/Margin"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="VB" type="VBoxContainer" parent="Balloon/VB/background/Margin/HB"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="CharacterLabel" type="RichTextLabel" parent="Balloon/VB/background/Margin/HB/VB"]
light_mask = 1024
layout_mode = 2
mouse_filter = 1
theme = ExtResource("4_lqgeo")
theme_override_font_sizes/normal_font_size = 10
bbcode_enabled = true
text = "rtetx"
fit_content = true
scroll_active = false
autowrap_mode = 0
visible_characters_behavior = 3

[node name="HB" type="HBoxContainer" parent="Balloon/VB/background/Margin/HB/VB"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = 0

[node name="DialogueLabel" type="RichTextLabel" parent="Balloon/VB/background/Margin/HB/VB/HB"]
light_mask = 1024
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.3
mouse_filter = 1
theme = ExtResource("4_lqgeo")
bbcode_enabled = true
text = "test"
fit_content = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false
visible_characters_behavior = 1
script = ExtResource("4_ak1da")
seconds_per_step = 0.1

[node name="auplayer" type="AudioStreamPlayer" parent="Balloon/VB/background/Margin/HB/VB/HB/DialogueLabel"]
stream = ExtResource("5_6xaee")

[node name="MC" type="MarginContainer" parent="Balloon/VB/background/Margin/HB/VB/HB"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
mouse_filter = 2
theme_override_constants/margin_left = 6

[node name="Hint" type="AnimatedSprite2D" parent="Balloon/VB/background/Margin/HB/VB/HB/MC"]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_ocbr1")
autoplay = "default"
frame_progress = 0.312957
offset = Vector2(8.13031, 10.3891)

[node name="MC" type="MarginContainer" parent="Balloon/VB"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="HB" type="HBoxContainer" parent="Balloon/VB/MC"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="MC" type="MarginContainer" parent="Balloon/VB/MC/HB"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="PointerLeft" type="Sprite2D" parent="Balloon/VB/MC/HB/MC"]
light_mask = 1024
material = SubResource("ShaderMaterial_wuh6v")
scale = Vector2(0.465, 0.465)
texture = ExtResource("3_tgniq")
offset = Vector2(8.007, 8)

[node name="ScreenCheckerL" type="VisibleOnScreenNotifier2D" parent="Balloon/VB/MC/HB/MC/PointerLeft"]
unique_name_in_owner = true
position = Vector2(-55.914, 0)

[node name="Sprite2D" type="Sprite2D" parent="Balloon/VB/MC/HB/MC/PointerLeft/ScreenCheckerL"]
scale = Vector2(0.48, 0.48)
texture = ExtResource("8_cn6xi")

[node name="MC2" type="MarginContainer" parent="Balloon/VB/MC/HB"]
layout_mode = 2
size_flags_horizontal = 10
mouse_filter = 2
theme_override_constants/margin_right = 0

[node name="PointerRight" type="Sprite2D" parent="Balloon/VB/MC/HB/MC2"]
light_mask = 1024
material = SubResource("ShaderMaterial_wuh6v")
scale = Vector2(0.465, 0.465)
texture = ExtResource("3_tgniq")
offset = Vector2(-8.02, 8)
flip_h = true

[node name="ScreenCheckerR" type="VisibleOnScreenNotifier2D" parent="Balloon/VB/MC/HB/MC2/PointerRight"]
unique_name_in_owner = true
position = Vector2(58.0645, 0)

[node name="Sprite2D2" type="Sprite2D" parent="Balloon/VB/MC/HB/MC2/PointerRight/ScreenCheckerR"]
scale = Vector2(0.48, 0.48)
texture = ExtResource("8_cn6xi")

[node name="Button" type="Button" parent="."]
visible = false
offset_left = -11.3764
offset_top = -12.8976
offset_right = -3.37638
offset_bottom = -4.89763

[node name="DialogueEndedTimer" type="Timer" parent="."]
autostart = true

[node name="DialogueEndTimer" type="Timer" parent="."]
one_shot = true

[node name="DialogueStartTimer" type="Timer" parent="."]
one_shot = true

[node name="TypeoutTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="gui_input" from="Balloon" to="." method="_on_balloon_gui_input"]
[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="timeout" from="DialogueEndedTimer" to="." method="_on_dialogue_ended_timer_timeout"]
[connection signal="timeout" from="DialogueEndTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TypeoutTimer" to="." method="_on_typeout_timer_timeout"]
